<?xml version="1.0"?>
<package>
  <name>capston_package</name>
  <version>0.0.0</version>
  <description>perspective_transform</description>
  <maintainer email="kim@todo.todo">kim</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_depend>image_transport</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
